# metered_usage_rust

./: Cargo.toml  Makefile  bacon.toml  body_test_request.json  docker-compose.yml
.github/workflows/: push.yml
cmd/parquet/: Cargo.toml
cmd/server/: Cargo.toml  entities.rs  main.rs  server.rs
docker/clickhouse/: Dockerfile
docker/clickhouse/init/: 0001_create_metered_usage_table.sql
docker/server/: .env.dev  Dockerfile  Dockerfile.ci  Dockerfile.dev
services/metered_usage/: Cargo.toml  service.rs
services/metered_usage/infrastructure/: clickhouse_client.rs
services/metered_usage/repository/: metered_usage_repository.rs  mod.rs  models.rs
services/metered_usage/services/: entities.rs  metered_usage_service.rs  mod.rs
