[workspace]
resolver = "3"
members = ["cmd/parquet", "cmd/server", "services/metered_usage"]

[workspace.dependencies]
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.20", features = ["env-filter"] }
uuid = { version = "1.18.0", features = ["serde", "v4", "v7"] }
chrono = { version = "0.4.41" }
